Fix command injection, support Ollama local LLM